// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppUninstallationSection should match a snapshot when theres no installations 1`] = `
<AppUninstallationSection
  clientId="SBOX-GWIT"
  installations={
    Object {
      "data": Array [],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <div
    className="el-mb11"
  >
    <Subtitle>
      <ElSubtitle
        className=""
      >
        <h2
          className="el-subtitle"
        >
          Current Installations
        </h2>
      </ElSubtitle>
    </Subtitle>
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
        </p>
      </ElBodyText>
    </BodyText>
  </div>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for a group installation 1`] = `
<AppUninstallationSection
  clientId="SBOX-TEST"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX-GWIT",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <div
    className="el-mb11"
  >
    <Subtitle>
      <ElSubtitle
        className=""
      >
        <h2
          className="el-subtitle"
        >
          Current Installations
        </h2>
      </ElSubtitle>
    </Subtitle>
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          This app is currently installed for 
          1 group
          . Please click ‘Uninstall’ to terminate the installation.
        </p>
      </ElBodyText>
    </BodyText>
    <ButtonGroup
      alignment="right"
    >
      <ElButtonGroup>
        <div
          className="el-button-group"
        >
          <ElButtonGroupInner
            className="el-button-group-align-right"
          >
            <div
              className="el-button-group-align-right el-button-group-inner"
            >
              <Button
                disabled={false}
                intent="primary"
                loading={false}
                onClick={[Function]}
              >
                <ElButton
                  className="el-intent-primary"
                  disabled={false}
                  onClick={[Function]}
                >
                  <button
                    className="el-intent-primary el-button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    Uninstall
                  </button>
                </ElButton>
              </Button>
            </div>
          </ElButtonGroupInner>
        </div>
      </ElButtonGroup>
    </ButtonGroup>
  </div>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for an all orgs installation 1`] = `
<AppUninstallationSection
  clientId="SBOX-GWIT"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <div
    className="el-mb11"
  >
    <Subtitle>
      <ElSubtitle
        className=""
      >
        <h2
          className="el-subtitle"
        >
          Current Installations
        </h2>
      </ElSubtitle>
    </Subtitle>
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          This app is currently installed for 
          your whole orgainsation
          . Please click ‘Uninstall’ to terminate the installation.
        </p>
      </ElBodyText>
    </BodyText>
    <ButtonGroup
      alignment="right"
    >
      <ElButtonGroup>
        <div
          className="el-button-group"
        >
          <ElButtonGroupInner
            className="el-button-group-align-right"
          >
            <div
              className="el-button-group-align-right el-button-group-inner"
            >
              <Button
                disabled={false}
                intent="primary"
                loading={false}
                onClick={[Function]}
              >
                <ElButton
                  className="el-intent-primary"
                  disabled={false}
                  onClick={[Function]}
                >
                  <button
                    className="el-intent-primary el-button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    Uninstall
                  </button>
                </ElButton>
              </Button>
            </div>
          </ElButtonGroupInner>
        </div>
      </ElButtonGroup>
    </ButtonGroup>
  </div>
</AppUninstallationSection>
`;

exports[`AppUninstallationSection should match a snapshot, for multiple group installations 1`] = `
<AppUninstallationSection
  clientId="SBOX-TEST"
  installations={
    Object {
      "data": Array [
        Object {
          "client": "SBOX-GWIT",
        },
        Object {
          "client": "SBOX-ABCT",
        },
      ],
    }
  }
  setPerformCompleteUninstall={[MockFunction]}
  setShowConfirmModal={[MockFunction]}
>
  <div
    className="el-mb11"
  >
    <Subtitle>
      <ElSubtitle
        className=""
      >
        <h2
          className="el-subtitle"
        >
          Current Installations
        </h2>
      </ElSubtitle>
    </Subtitle>
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          This app is currently installed for 
          2 groups
          . Please click ‘Uninstall’ to terminate the installation.
        </p>
      </ElBodyText>
    </BodyText>
    <ButtonGroup
      alignment="right"
    >
      <ElButtonGroup>
        <div
          className="el-button-group"
        >
          <ElButtonGroupInner
            className="el-button-group-align-right"
          >
            <div
              className="el-button-group-align-right el-button-group-inner"
            >
              <Button
                disabled={false}
                intent="primary"
                loading={false}
                onClick={[Function]}
              >
                <ElButton
                  className="el-intent-primary"
                  disabled={false}
                  onClick={[Function]}
                >
                  <button
                    className="el-intent-primary el-button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    Uninstall
                  </button>
                </ElButton>
              </Button>
            </div>
          </ElButtonGroupInner>
        </div>
      </ElButtonGroup>
    </ButtonGroup>
  </div>
</AppUninstallationSection>
`;
